--- a/config/config.json
+++ b/config/config.json
@@ -17,7 +17,7 @@
 	},
 	"production": {
 		"username": "root",
-		"password": "password",
+		"password": "password123",
 		"database": "crud",
 		"host": "localhost",
 		"dialect": "mysql",
