--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor directories and files
+# Editor directories and files here
 .idea
 .vscode
 *.suo
